test/fail/ztup01.v3
//@execute =0
def main() -> int {
	for (f in [
		(4, main),
		(3, null)
	]) {
	}
	return 0;
}
